# ChangeLog for dev-util/bzrtools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/ChangeLog,v 1.65 2009/08/18 11:19:10 fauli Exp $

*bzrtools-1.17.0 (18 Aug 2009)

  18 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  +bzrtools-1.17.0.ebuild:
  version bump

  20 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  -bzrtools-1.9.1.ebuild, -bzrtools-1.10.0.ebuild, -bzrtools-1.11.0.ebuild,
  -bzrtools-1.12.0.ebuild, -bzrtools-1.13.0.ebuild, -bzrtools-1.14.0.ebuild:
  clean up

  17 Jul 2009; nixnut <nixnut@gentoo.org> bzrtools-1.15.0.ebuild:
  ppc stable #274451

  05 Jul 2009; Markus Meier <maekke@gentoo.org> bzrtools-1.15.0.ebuild:
  amd64 stable, bug #274451

  02 Jul 2009; Raúl Porcel <armin76@gentoo.org> bzrtools-1.15.0.ebuild:
  sparc stable wrt #274451

  17 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  bzrtools-1.15.0.ebuild:
  stable x86, bug 274451

*bzrtools-1.16.0 (17 Jun 2009)

  17 Jun 2009; Peter Volkov <pva@gentoo.org> +bzrtools-1.16.0.ebuild:
  Version bump.

*bzrtools-1.15.0 (05 Jun 2009)

  05 Jun 2009; Peter Volkov <pva@gentoo.org> +bzrtools-1.15.0.ebuild,
  +files/bzrtools-1.15.0-test_fetch_ghosts.patch:
  Version bump.

  01 Jun 2009; Markus Meier <maekke@gentoo.org> bzrtools-1.13.0.ebuild:
  amd64 stable, bug #271130

  25 May 2009; Christian Faulhammer <fauli@gentoo.org>
  bzrtools-1.13.0.ebuild:
  stable x86, bug 271130

*bzrtools-1.14.0 (11 Apr 2009)

  11 Apr 2009; Peter Volkov <pva@gentoo.org> +bzrtools-1.14.0.ebuild:
  Version bump.

  22 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing hawking as a maintainer since he was retired. Fixed some QA warnings.

*bzrtools-1.13.0 (15 Mar 2009)

  15 Mar 2009; Peter Volkov <pva@gentoo.org> +bzrtools-1.13.0.ebuild:
  Version bump.

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
  bzrtools-1.12.0.ebuild:
  add explicit RDEPEND to quiten repoman
