@@ -1,9 +1,7 @@
 AUX bzrtools-1.15.0-test_fetch_ghosts.patch 1168 RMD160 eb321dfbbf4160e17bf5437cfbca00112f328801 SHA1 e970a60e70db627477776b25c984d64a2c279f6c SHA256 04fa9459f7e4a14c19b8ba04425ec907a9772bad8738069f1bb8b3c9c11e7c6b
 DIST bzrtools-1.15.0.tar.gz 69839 RMD160 8b75fb9d43fac5c5fdfa56a1885afa1a1358e952 SHA1 4009b1197a502836973236efbbcf11a18ca54ff8 SHA256 53dd25d35c726230897f823d5b130e768fb31a77ae2d153b2221080f4ffce6b7
-DIST bzrtools-1.16.0.tar.gz 70950 RMD160 6201e5afdd15eca65fb33a969f4cc6f30b3c4a96 SHA1 4c3299bd7bb8a934cf327ba1d8deeb17106d1a88 SHA256 8f1b0f1a0cf3e3b016f28b2fbf8c311017c46da1fb5b574f1c3837a2132bca51
-DIST bzrtools-1.17.0.tar.gz 71100 RMD160 7033873308585491c7a674700aa7a0f11b3f3e73 SHA1 36b154b599f27f4a066bda9c6af0b14b4e1caf14 SHA256 198ab929c3f652cae38b518022290f63c297f3fc1bf2a7266b8b071b98aec3f3
+DIST bzrtools-1.18.0.tar.gz 71110 RMD160 d488c066b5d51685ddc29d27b00c25da15d73ba8 SHA1 9bdaef12a71a3b00839ba1f35da3ba3f2b4aef30 SHA256 2841228544ce6169d347c75a25d3c9b26fa3c406e1197c21236bcec8b59ec523
 EBUILD bzrtools-1.15.0.ebuild 1534 RMD160 2f494d2bc380b094f30320730fe52ce23f2e4ece SHA1 adaa9467fb9f750a33b8348ad6cd5a0118b3e46e SHA256 1abfb27b59da23c6569472431d7b8ae781ab8e8a2c5d43afeda64130b3825920
-EBUILD bzrtools-1.16.0.ebuild 1438 RMD160 a68b19ea29db87d29a68a56c49f18f5bd38c7a1c SHA1 f3e08b9e93c3f4be208d35845dc59cb53344a020 SHA256 15adfa0acfec964c95af06f25c5dd51f742d7db9a4d76c8df7cb697a88f9138a
-EBUILD bzrtools-1.17.0.ebuild 1444 RMD160 a6ca651670c35ec9d5d3c5316181c398190b6774 SHA1 1644c897e1865e15b605f27d6becd137703fb49a SHA256 e5496734b135e47c9198fd9bea444caec1db50ed2d57dbfb95d0e3294c133fc3
-MISC ChangeLog 8815 RMD160 98abee330397871f1a545f4812a91e7eca0cb45c SHA1 32e4006aa00aa5b7d3ef0aa36c3140bff80d10b3 SHA256 2b5fa243416cbcc760bd6c303584bf690e48bcfceefe280d4c20f626fb197eed
+EBUILD bzrtools-1.18.0.ebuild 1461 RMD160 79edc14494755ea4de7f84cc24efab6b007c745c SHA1 25560242c4b4f0566a649d38657ed3197ef0a952 SHA256 96b554185338d7cb6c284092e7197833adb6c20b39bcf31eb81a3f2f2d2f547a
+MISC ChangeLog 9064 RMD160 314d0d4112b61bbac1a42b61e7f26044f08a15f5 SHA1 4993a67ba38e799432af35f54b8227850c686374 SHA256 19d6eb2c5d766cacde7c00ccfba90a957f71de72f020b7f76ad99fc42eb843f5
 MISC metadata.xml 361 RMD160 d77927c9c34f5be7b754769f90913041627e96ac SHA1 1e201037cbce92208e6b0cbd129963e59b2a6cd5 SHA256 44e6fd2572b23364bbb2fc284d1c4edb708452f2fbe93f9f6465d5dcc10c28ec
